objects/tffa__Application__c.object
<CustomObject>
    <fields>
        <fullName>tffa__ExchangeVehicleMonthlyPayment__c</fullName>
        <description>The expected monthly outgoing to service this liability</description>
        <label>Exchange vehicle monthly payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleOutstandingBalance__c</fullName>
        <description>The outstanding principal amount on the loan</description>
        <label>Exchange vehicle outstanding balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleType__c</fullName>
        <description>Type of the exchange vehicle. Values can be car, heavy goods vehicle, commercial vehicle etc</description>
        <label>Exchange vehicle type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__VehicleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleYear__c</fullName>
        <description>Manufacturing year of the exchange vehicle</description>
        <label>Exchange vehicle year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVin__c</fullName>
        <description>The car&apos;s vehicle identification number (VIN) is the identifying code for a SPECIFIC automobile</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exchange vin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExistingCardNumber__c</fullName>
        <description>Captures existing card number of the customer if credit card application is initiated to increase the credit limit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Existing Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExpectedClosingDate__c</fullName>
        <description>Expected closing date for the property. Useful to benchmark time to taken</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Closing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExpectedClosingDisclosureDate__c</fullName>
        <description>Expected date on which closing disclure is to be issued for the mortgage application. Useful to benchmark time to taken</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected closing disclosure date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExpectedCreditDecisionDate__c</fullName>
        <description>Expected credit decision date for the mortgage application. Useful to benchmark time to taken</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected credit decision date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExpectedLoanEstimateDate__c</fullName>
        <description>Expected date on which loan estimate is to be issued to the applicant for the mortgage application. Useful to benchmark time to taken</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected loan estimate date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExpiryDate__c</fullName>
        <description>Expiry date for line of credit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalFacilityId__c</fullName>
        <description>Captures identifier of the facility, if the current lending application is created against existing facility of the customer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External facility id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__ExternalMortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether existing mortgage is held with an external bank</description>
        <label>External mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Fact__c</fullName>
        <description>Link to fact record. Used for linking fact record with status history records.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialInstitution__c</fullName>
        <description>Captures name of the institution if existing mortgage is external</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialNeed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to FinancialNeed acting as the source of the recommendation that resulted in the application.</description>
        <label>Financial Need</label>
        <referenceTo>tffa__FinancialNeed__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__FraudStatus__c</fullName>
        <description>Overall FraudStatus (refer DueDiligence for FRAUD) across related Parties. Typically refers to FraudStatus of primary Party.</description>
        <label>Fraud Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__FundedAmount__c</fullName>
        <description>Total amount funded for the account opened in the current application. This will be sum of all amounts from successfully completed funding requests.</description>
        <label>Funded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__HELOCPurpose__c</fullName>
        <description>Captures purpose of applying for HELOC</description>
        <label>Heloc Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__HELOCPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__HasAddOnVehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the vehicle being purchase or refinanced has add on vehicle</description>
        <label>Has add on vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasBeneficiary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether current certificate application has beneficiaries</description>
        <label>Has beneficiary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasExternalDisclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if disclosures are generated by external system</description>
        <label>Has External Disclosures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasExternalDisclosures__c</fullName>
        <description>True if disclosures are generated by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Has External Disclosures (DEPRECATED)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__HasVehicleCustomizations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the vehicle being purchase or refinanced has third party customizations</description>
        <label>Has vehicle customizations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasVehicleInsurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether insurance details are to be captured for the vehicle loan application</description>
        <label>Has vehicle insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HealthInsurancePlanCoverageType__c</fullName>
        <description>Specifies the type of health insurance plan coverage for HSA account.</description>
        <label>Health Insurance Plan Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__HealthInsurancePlanCoverageType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__HighestDegreeObtained__c</fullName>
        <description>Captures educations degrees maintained in the system for the education loan application</description>
        <label>Highest degree obtained</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EducationDegree</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__HousingExpenseRatio__c</fullName>
        <description>&quot;The ratio of the proposed monthly housing expenses to the qualifying income of the borrowers as per lender or investor guidelines. AKA Front End Ratio.</description>
        <label>Housing Expense Ratio</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__HullIdentificationNumber__c</fullName>
        <description>A hull number is the serial identification number of a boat or ship.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hull identification number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IDAStatus__c</fullName>
        <description>Overall IDAStatus (refer DueDiligence for IDA) across related Parties. Typically refers to IDAStatus of primary Party.</description>
        <label>IDA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IDVStatus__c</fullName>
        <description>Overall IDVStatus (refer DueDiligence for IDV) across related Parties. Typically refers to IDVStatus of primary Party.</description>
        <label>IDV Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IndexedRate__c</fullName>
        <description>An indexed rate is an interest rate that is tied to a specific benchmark with rate changes based on the movement of the benchmark.</description>
        <label>Indexed rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__InitialRateAdjustmentDuration__c</fullName>
        <description>The number of months in the initial fixed period of a loan with an adjustable rate or payment.</description>
        <label>Initial rate adjustment duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__InterestOnlyIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that the loan terms allow interest-only payments to be made for a specified time period.</description>
        <label>Interest only indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__InterestOnlyTerm__c</fullName>
        <description>The number of months the loan remains interest only.</description>
        <label>Interest only term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__InterestPayoutFrequency__c</fullName>
        <description>Interest Payout Frequency for CD</description>
        <label>Interest Payout Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InterestPayoutFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__InterestPayoutMode__c</fullName>
        <description>Interest Payout Modes for CD</description>
        <label>Interest Payout Modes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InterestPayoutMode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__InvestmentAccountType__c</fullName>
        <description>The type of underlying Deposit account</description>
        <label>Investment Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InvestmentAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__InvestmentContributionSourceType__c</fullName>
        <description>Different contribution source types of Invesment plan</description>
        <label>Investment contribution source type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InvestmentContributionSourceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__InvestmentContributionTaxYear__c</fullName>
        <description>Investment contribution Tax Year</description>
        <label>Investment contribution Tax Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__InvestmentContributionType__c</fullName>
        <description>Different contribution types of Invesment plan</description>
        <label>Investment Contribution Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InvestmentContributionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__InvestmentPlanNumber__c</fullName>
        <description>The plan number which is generated as per Instituition strategy</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Investment Plan Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__InvestmentPlanType__c</fullName>
        <description>Different types of Invesment plan</description>
        <label>Investment Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__InvestmentPlanType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IsBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if business type of product is selected</description>
        <label>Is Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the application contains multiple accounts. Each account is represented by an application term.</description>
        <label>Has multiple accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDepositBoxDiscountApplied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the discount is applied on deposit box fees</description>
        <label>Is deposit box discount applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDepositBoxFeeWaived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the deposit box fees is waived</description>
        <label>Is deposit box fee waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDepositBoxRenewalCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the renewal instruction is captured for deposit box fees</description>
        <label>Is deposit box renewal captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDisbursementAccountCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true if disbursement account is captured</description>
        <label>Is disbursement account captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDisclosureDocumentGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether disclosure documents have been generated by external system which are required to process the application before opening an account</description>
        <label>Is Disclosure Document Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDisclosureSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether disclosure documents have been signed which are required to process the application before opening an account</description>
        <label>Is Disclosure Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDisclosureSigningRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether disclosure signing is required to process the application before opening an account</description>
        <label>Is Disclosure Signing Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsExchangeVehicleCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if exchange vehicle information is captured</description>
        <label>Is exchange vehicle captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsExistingInvestmentPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if investment plan is existing one</description>
        <label>Is Existing Investment Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsFundingCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true if funding request is captured</description>
        <label>Funding Captured ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsFundingIdentityMismatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True , if there is a suspected identity mismatch between primary applicant and the owner of the funding source account</description>
        <label>Is Funding Identity Mismatch ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsInheritedInvestmentPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if investment plan is Inherited one</description>
        <label>Is Existing Investment Inherited Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsLadder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, the application contains multiple CD accounts for the purpose of laddering. Each account is represented by an application term.</description>
        <label>Is CD ladder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsLending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the product category belongs to lending</description>
        <label>Is Lending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsOwnedByCurrentUser__c</fullName>
        <description>Indicates whether the Application is owned by the current (contextual) User.</description>
        <formula>OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owned by Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsQueueOwned__c</fullName>
        <description>Indicates whether the application is owned by a queue. Can be used (as filter) to build a list view showing applications not assigned to any user (Unassigned Applications).</description>
        <formula>ISBLANK(Owner:User.Username)</formula>
        <label>Is Queue Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRateLockCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if rate lock request is captured</description>
        <label>Is rate lock captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRemoteFundingCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if funding request is captured remotely</description>
        <label>Is remote funding captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRepaymentAccountCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true if repayment account is captured</description>
        <label>Is repayment account captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__KYCApprovalReason__c</fullName>
        <description>Reason for approving the application in KYC decisioning stage.</description>
        <label>KYC Approval Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__KYCApprovalReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionAffectedPartyIds__c</fullName>
        <description>Ids of parties (semicolon separated) that led to the current decision outcome. Set in declined and counter offer scenarios only.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC decision affected party ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionAffectedPartyNames__c</fullName>
        <description>Names of parties (semicolon separated) that led to the current decision outcome. Set in declined and counter offer scenarios only.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC decision affected party names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionNextAction__c</fullName>
        <description>Possible next actions to execute in a KYC decisioning process. Expressed as a semicolon delimited list of values.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Decision Next Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionOutcome__c</fullName>
        <description>Outcome of a KYC decisioning process.</description>
        <label>KYC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionOverridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If auto KYCDecisionOutcome was overridden.</description>
        <label>KYC Decision Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionOverrideComments__c</fullName>
        <description>Additional notes stating why the auto KYCDecisionOutcome was overridden.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Decision Override Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Strategy of related (KYC) Matrix. Can be used for analysing the efficacy of the strategy during Champion/Challenger testing. e.g. does the new strategy involving new set of rules (based on new facts) yield better results.</description>
        <label>KYC Decision Strategy</label>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>KYC Decisioned Applications</relationshipLabel>
        <relationshipName>KYCDecisionedApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDecisionSupportsAffectedPartyRemoval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set, the user gets an option to remove the parties that led to declined/counter offer decision outcome of the application.</description>
        <inlineHelpText>If set, the user gets an option to remove the parties that led to declined/counter offer decision outcome of the application.</inlineHelpText>
        <label>KYC decision supports removal of parties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__KYCDeclinedReason__c</fullName>
        <description>Reason for declining the application in KYC decisioning stage.</description>
        <label>KYC Declined Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__KYCDeclinedReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__LadderPlanCode__c</fullName>
        <description>Unique identifier (or code) of ladder plan selected.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ladder Plan code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__LienPriority__c</fullName>
        <description>A value from a MISMO prescribed list that specifies the priority of the lien against the subject property.</description>
        <label>Lien priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__LienPriorityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__LoanToValueRatio__c</fullName>
        <description>The ratio of the (outstanding) loan amount to the appraised value, estimated value or purchase price of the property.</description>
        <label>Loan To Value Ratio (LTV)</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__LocationCode__c</fullName>
        <description>Unique code of the current geographical location/branch of the account.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Location(Branch) code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The current geographical location/branch of the account. This will be computed or selected</description>
        <label>Location(Branch)</label>
        <referenceTo>tffa__Location__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether current application is locked for editing</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Margin__c</fullName>
        <description>Margin is the difference between the total value of securities held in an investor&apos;s account and the loan amount from a broker. Buying on margin is the act of borrowing money to buy securities.</description>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaskedAccountNumber__c</fullName>
        <description>Last 4 digits of account numner for display purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MaturityDate__c</fullName>
        <description>The maturity date of a Certificate or Lending accounts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Maturity date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__MaxDelinquencyDuration__c</fullName>
        <description>Max delinquency duration in days</description>
        <label>Max delinquency duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MaxDelinquentLimitPercentage__c</fullName>
        <description>Max Percentage of Limits Available to Max Delinquency</description>
        <label>Max delinquent limit percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__MerchantServicesProvider__c</fullName>
        <description>Captures the provider system name for the underlying merchant services</description>
        <label>Merchant Services Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MerchantServicesProvider</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__MonthlyRepaymentAmount__c</fullName>
        <description>Monthly repayment amount for the current loan account</description>
        <label>Monthly repayment amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MortgageLoanPurpose__c</fullName>
        <description>Primary purpose for mortgage application</description>
        <label>Mortgage loan purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MortgageLoanPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__MortgageRepaymentType__c</fullName>
        <description>Captures ways to repay mortgage loan amount.</description>
        <label>Mortgage repayment type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MortgageRepaymentType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__MortgageType__c</fullName>
        <description>Type of the mortgage captured for the mortgage application</description>
        <label>Mortgage type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__MortgageType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__NegativeAmortizationIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that the loan terms allow unpaid interest to be added to the principal of the loan that can or will result in negative amortization.</description>
        <label>Negative amortization indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfCards__c</fullName>
        <description>Number of credit cards applied with the current application</description>
        <label>Number of cards</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfCustomers__c</fullName>
        <description>Number of existing customers in the application.</description>
        <formula>tffa__NumberOfParties__c - tffa__NumberOfProspects__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfDepositBoxKeys__c</fullName>
        <description>Number of keys issued with the box</description>
        <label>Number of deposit box keys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfIndividuals__c</fullName>
        <description>Number of parties of type INDIVIDUAL in the application.</description>
        <label>Number Of Individuals</label>
        <summaryFilterItems>
            <field>tffa__ApplicationPartyXref__c.tffa__Type__c</field>
            <operation>equals</operation>
            <value>INDIVIDUAL</value>
        </summaryFilterItems>
        <summaryForeignKey>tffa__ApplicationPartyXref__c.tffa__Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>